# Engine

./: .gitmodules  CMakeLists.txt  README.md
resources/objects/gun/: Leia-me.txt  Read me.txt  pistol_tauros.x3d
src/: main.cpp  vertices.h
src/Camera/: Camera.cpp  Camera.h
src/Lighting/: Lighting.cpp  Lighting.h
src/Lighting/presets/: Flashlight.h  GlobalLight.h  Lamp.h
src/Mesh/: Mesh.cpp  Mesh.h
src/Model/: Model.cpp  Model.h
src/Service/: Service.cpp  Service.h
src/Shader/: Shader.cpp  Shader.h
src/Texture/: Texture.cpp  Texture.h
src/shaders/: base.fragment.glsl  base.vertex.glsl  fragment.glsl  light.vertex.glsl  singleColor.fragment.glsl  transparent.fragment.glsl  transparent.vertex.glsl  vertex.glsl
src/types/: CachedUniformNames.h  Lighting.h  Mesh.h
